[project]
name = "sferumtransferbot"
version = "0.1.0"
description = "Transfer messages from MAX to Telegram"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.26.0",
    "aiohttp>=3.13.5",
    "maxapi-python>=1.2.5",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
]

[tool.uv.sources]
maxapi-python = { git = "https://github.com/firedotguy/PyMax" }
